<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/score_fundo"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/bt_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:clickable="true"
        android:contentDescription="@string/bt_voltar"
        android:src="@drawable/bt_voltar" />

    <ImageView
        android:id="@+id/img_espaco_central_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/img_espaco_central_vertical"
        android:contentDescription="@string/img_espaco_central_vertical" />

    <TextView
       
        android:id="@+id/campo_acertos"
        android:textStyle="bold"  
        android:textColor="#000000"
        android:typeface="sans" 
        android:textSize="40sp"     
        android:text="0"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_toLeftOf="@+id/img_espaco_central_vertical"
        android:contentDescription="@string/campo_acertos" />

       

    <TextView
        android:id="@+id/campo_erros"
        android:textStyle="bold"  
        android:textColor="#000000"  
        android:text="0"
        android:typeface="sans"  
        android:textSize="40sp"  
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/img_espaco_central_vertical"
        android:contentDescription="@string/campo_erros"/>

    <ImageView
        android:id="@+id/estrelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/img_0_estrelas"
        android:contentDescription="@string/estrelas_score" />

</RelativeLayout>