<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagem_fundo"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/bt_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/bt_voltar"
        android:src="@drawable/bt_voltar" />

    <ImageView
        android:id="@+id/bt_som"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/botao"
        android:src="@drawable/bt_som" />

    <ImageView
        android:id="@+id/bt_anterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/botao"
        android:src="@drawable/bt_anterior" />

    <ImageView
        android:id="@+id/bt_proximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/botao"
        android:src="@drawable/bt_proximo" />

    <ImageView
        android:id="@+id/imagem_selecionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:contentDescription="@string/fundo"
        android:layout_centerHorizontal="true" />

</RelativeLayout>